--- a/index.html
+++ b/index.html
@@ -6,13 +6,35 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>UNAM / DGAE / SIAE ~ Sistema Integral de Administración Escolar</title>
     <meta name="description" content="UNAM DGAE SIAE - Sistema Integral de Administración Escolar, Servicios Escolares">
+    <link rel="icon" type="image/png" href="./favicon.png">
     <link rel="stylesheet" type="text/css" href="./assets/siae-general.pack.css">
     <style type="text/css">
-        #cabecera { margin-top: 11px; width: 100%; }
-        #cabecera tr td { line-height: 9pt; }
-        .logo-unam { height: 93px; margin-right: 17px; }
-        .logo-siae { height: 86px; }
-        .content-body { padding: 40px; text-align: center; background: white; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); margin-top: 20px; }
+        #cabecera {
+            margin-top: 11px;
+            width: 100%;
+        }
+
+        #cabecera tr td {
+            line-height: 9pt;
+        }
+
+        .logo-unam {
+            height: 93px;
+            margin-right: 17px;
+        }
+
+        .logo-siae {
+            height: 86px;
+        }
+
+        .content-body {
+            padding: 40px;
+            text-align: center;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+        }
     </style>
 </head>
 
@@ -24,7 +46,8 @@
                     <table id="cabecera" width="100%" border="0" cellspacing="0" cellpadding="0" align="center">
                         <tbody>
                             <tr>
-                                <td align="left" width="77"><img class="logo-unam" src="./assets/escudo_unam_gold5.svg" height="93"></td>
+                                <td align="left" width="77"><img class="logo-unam" src="./assets/escudo_unam_gold5.svg"
+                                        height="93"></td>
                                 <td align="left">
                                     <b>UNIVERSIDAD NACIONAL AUTONOMA DE MEXICO</b><br>
                                     SECRETARIA GENERAL<br>
@@ -44,12 +67,15 @@
                 <td>
                     <div class="content-body">
                         <h3>Validación de Documentos Académicos</h3>
-                        <p>Para validar un documento, por favor escanee el código QR impreso en el certificado o acceda a través del enlace de verificación oficial proporcionado.</p>
-                        <p style="color: #666; font-size: 0.9em;">Esta página requiere parámetros de consulta específicos para mostrar la información de validación.</p>
+                        <p>Para validar un documento, por favor escanee el código QR impreso en el certificado o acceda
+                            a través del enlace de verificación oficial proporcionado.</p>
+                        <p style="color: #666; font-size: 0.9em;">Esta página requiere parámetros de consulta
+                            específicos para mostrar la información de validación.</p>
                     </div>
                 </td>
             </tr>
         </tbody>
     </table>
 </body>
+
 </html>
