--- a/mod_val/www_val.html
+++ b/mod_val/www_val.html
@@ -11,6 +11,7 @@
     <meta name="copyright" content="© 1998-2026 UNAM/DGAE/SSRE/SIAE">
     <meta name="robot" content="noindex,nofollow">
     <meta http-equiv="X-UA-Compatible" content="IE=9">
+    <link rel="icon" type="image/png" href="../favicon.png">
 
     <link rel="stylesheet" type="text/css" href="../assets/siae-general.pack.css">
     <link rel="stylesheet" type="text/css" href="../assets/www_val.pack.css">
@@ -204,7 +205,8 @@
                                         <table class="table table-bordered">
                                             <tbody>
                                                 <tr>
-                                                    <th colspan="2" class="CellHead">Detalles Generales Del Documento</th>
+                                                    <th colspan="2" class="CellHead">Detalles Generales Del Documento
+                                                    </th>
                                                 </tr>
                                                 <tr>
                                                     <th>Nombre Del Documento</th>
@@ -287,7 +289,7 @@
                 // Update alert to success
                 alertEl.className = 'alert alert-success';
                 alertEl.innerHTML = '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Documento encontrado. Por favor rectifique los datos proporcionados';
-                
+
                 // Show tables
                 dataTables.style.display = 'block';
 
@@ -330,4 +332,5 @@
         });
     </script>
 </body>
+
 </html>
