--- a/admin_qrs.html
+++ b/admin_qrs.html
@@ -251,9 +251,12 @@
 
             for (const id in unamEntries) {
                 const user = unamEntries[id];
-                const validationUrl = `${BASE_URL}mod_val/www_val.html?id=${id}`;
-                // Cambiado a api.qrserver.com que es más estable
-                const qrUrl = `https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=${encodeURIComponent(validationUrl)}`;
+                // Añadimos un hash ficticio largo para aumentar la densidad de datos y un parámetro de acción
+                const dummyHash = "398225beff9e24d0255ec04c919b3e48dfff46b03daebb859e9c2f760faa6aae";
+                const validationUrl = `${BASE_URL}mod_val/www_val.html?id=${id}&hash=${dummyHash}&accion=pib`;
+
+                // Usamos ecc=H (High) para máxima densidad y redundancia
+                const qrUrl = `https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=${encodeURIComponent(validationUrl)}&ecc=H`;
 
                 const card = document.createElement('div');
                 card.className = 'user-card';
@@ -262,13 +265,13 @@
                         <strong>ID:</strong> <span class="badge">${id}</span><br>
                         <strong>Nombre:</strong> ${user.datosPersonales.nombres} ${user.datosPersonales.primerApellido}<br>
                         <strong>Cuenta:</strong> ${user.datosPersonales.numeroCuenta}<br><br>
-                        <strong>Link QR:</strong><br>
-                        <a href="${validationUrl}" target="_blank">${validationUrl}</a>
+                        <strong>Link QR (Formato Denso):</strong><br>
+                        <a href="${validationUrl}" target="_blank" style="font-size: 11px; word-break: break-all;">${validationUrl}</a>
                     </div>
                     <div class="qr-box">
                         <img src="${qrUrl}" alt="QR" onerror="this.src='https://via.placeholder.com/150?text=Error+QR'">
                         <br>
-                        <small>Click derecho -> Guardar</small>
+                        <small>Formato Alta Densidad (ECL H)</small>
                     </div>
                 `;
                 userList.appendChild(card);
